examples/type_system/failing/47_main_with_parameters.flx
// E411: main cannot declare parameters.

fn main(x: Int) {
    x
}
